# isotope

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.old/: .gitignore  Cargo.toml  README.md
.zed/: tasks.json
boson/: Cargo.toml  README.md
boson/src/: lib.rs  point_mass.rs  rigid_body.rs  static_collider.rs
compound/: Cargo.toml  README.md
compound/src/: lib.rs
gpu_controller/: API.md  Cargo.toml  EXAMPLES.md  README.md
gpu_controller/src/: defaults.rs  layouts.rs  lib.rs
isotope/: Cargo.toml  README.md
isotope/src/: asset_server.rs  lib.rs  material.rs  model.rs  physics.rs  rendering_window.rs  state.rs  texture.rs
isotope/src/elements/: camera.rs  instancer.rs  mod.rs  transform.rs  window_controller.rs
isotope_app/: Cargo.toml
isotope_app/src/: asset_server.rs  lib.rs  material.rs  model.rs  rendering_window.rs  texture.rs
isotope_test/: Cargo.toml
isotope_test/src/: instancer.wgsl  main.rs
isotope_utils/: Cargo.toml
isotope_utils/src/: lib.rs
matter_vault/: Cargo.toml  README.md
matter_vault/src/: lib.rs
photon/: Cargo.toml  README.md
photon/src/: lib.rs  render_descriptor.rs  texture.rs
src/: debugger.rs  lib.rs  main.rs  main.rs.old  state.rs  transform.rs
src/boson/: boson_math.rs  debug_renderer.rs  mod.rs  particle_system.rs  rigid_body.rs  static_collider.rs
src/compound/: mod.rs
src/element/: asset_manager.rs  buffered.rs  material.rs  mesh.rs  (+4 more)
test_files/: cone.mtl  cube.blend  cube.mtl  frustum_math.py  monkey.mtl  no_texture_cube.mtl  other_cube.mtl  plane.mtl  test_frag.wgsl  test_instancer.wgsl
(+101 files in other folders)
