[package]
name = "isotope"
version = "0.1.0"
edition = "2024"

[dependencies]
photon = { path = "../photon" }
gpu_controller = { path = "../gpu_controller" }
matter_vault = { path = "../matter_vault" }
compound = { path = "../compound" }
boson = { path = "../boson" }
winit = "0.30.11"
log = "0.4.27"
anyhow = "1.0.98"
smol = "2.0.2"
bytemuck = "1.23.2"
image = "0.25.6"
cgmath = "0.18.0"
