[package]
name = "isotope_app"
version = "0.1.0"
edition = "2024"

[dependencies]
photon = { path = "../photon" }
gpu_controller = { path = "../gpu_controller" }
matter_vault = { path = "../matter_vault" }
winit = "0.30.11"
log = "0.4.27"
wgpu = "25.0.2"
anyhow = "1.0.98"
obj_2_rust = "0.1.5"
smol = "2.0.2"
